--- a/frontend/src/Admin++/components/datatable/datatable.scss
+++ b/frontend/src/Admin++/components/datatable/datatable.scss
@@ -6,6 +6,7 @@
   position: relative; /* Ensure positioning context */
   // left: 0px; /* Move the datatable 20px to the right */
   font-family: "Poppins", sans-serif;
+  // background-color: white;
 
   .datatableTitle {
     width: 100%;
