--- a/frontend/src/Admin++/pages/AddActivityCategory/AddActivityCategory.scss
+++ b/frontend/src/Admin++/pages/AddActivityCategory/AddActivityCategory.scss
@@ -2,6 +2,8 @@
   display: flex;
   width: 100%;
   //min-height: 100vh;
+  height: 100vh;
+  background-color: white;
 }
 
 // .sidebarAdmin {
@@ -16,6 +18,7 @@
   overflow: auto;
   position: relative;
   //padding-top: 40px;
+  margin-top: 50px;
 }
 
 .cardsContainerActivity {
