--- a/frontend/src/Admin++/components/sidebar/sidebar.scss
+++ b/frontend/src/Admin++/components/sidebar/sidebar.scss
@@ -1,8 +1,9 @@
 .sidebarAdmin {
   flex: 1;
-  border-right: 0.5px solid rgb(230, 227, 227);
+  border-right: 5px solid #91c2979b;
   height: 100vh; /* Makes the sidebar height fill the viewport */
-  background-color: white;
+  //background-color: white;
+  background-color: #f4eaef76;
   text-align: left;
   position: fixed; /* Fixed position so it stays in place while scrolling */
   left: 0; /* Ensures it stays on the left side */
@@ -10,7 +11,7 @@
   width: 250px;
   padding-left: 20px; /* Add padding to shift content slightly right */
   overflow-y: auto; /* Ensures it can scroll vertically if content exceeds height */
-
+  margin-top: 50px; /* 70px navbar height + 20px padding for spacing */
   .topAdmin {
     height: 50px;
     display: flex;
@@ -55,6 +56,24 @@
         &:hover {
           background-color: #f6d8e576;
           border-radius: 8px;
+        }
+
+        .sidebarAdmin .center ul li {
+          display: flex;
+          align-items: center;
+          padding: 5px;
+          cursor: pointer;
+          border-left: 3px solid transparent;
+          transition: background-color 0.3s, border-color 0.3s;
+        }
+
+        .sidebarAdmin .center ul li:hover {
+          background-color: #95e3bb;
+        }
+
+        .sidebarAdmin .center ul li.active-tab {
+          background-color: rgba(149, 227, 187, 0.2);
+          border-left: 3px solid #95e3bb; /* Highlight selected tab */
         }
 
         .iconAdmin {
