--- a/frontend/src/Admin++/pages/ActiveUsers/ActiveUsers.scss
+++ b/frontend/src/Admin++/pages/ActiveUsers/ActiveUsers.scss
@@ -8,6 +8,7 @@
   margin-left: 250px; /* Adjust this value to match the width of your sidebar */
   padding: 20px;
   display: flex;
+  margin-top: 50px;
   flex-direction: column; /* Align items vertically */
 }
 
