--- a/frontend/src/Admin++/pages/AddAdmin/AddAdmin.scss
+++ b/frontend/src/Admin++/pages/AddAdmin/AddAdmin.scss
@@ -1,6 +1,9 @@
 .listAddAdmin {
   display: flex;
   width: 100%;
+  height: 100vh;
+  top: 0;
+  background-color: white;
 }
 
 .listContainerAddAdmin {
@@ -8,6 +11,7 @@
   margin-left: 290px; /* Match the width of the sidebar */
   padding: 20px;
   overflow: auto;
+  margin-top: 50px;
   position: relative; /* Contain absolutely positioned elements */
 }
 
