--- a/frontend/src/Admin++/pages/AddGoverner/AddGoverner.scss
+++ b/frontend/src/Admin++/pages/AddGoverner/AddGoverner.scss
@@ -1,6 +1,8 @@
 .listAddGoverner {
   display: flex;
   width: 100%;
+  height: 100vh;
+  background-color: white;
 }
 
 .sidebar {
@@ -14,6 +16,7 @@
   padding: 20px;
   overflow: auto;
   position: relative; /* Contain absolutely positioned elements */
+  margin-top: 50px;
 }
 
 .cardsContainer {
