--- a/frontend/src/Admin++/pages/AddTag/AddTag.scss
+++ b/frontend/src/Admin++/pages/AddTag/AddTag.scss
@@ -1,6 +1,8 @@
 .listTag {
   display: flex;
   width: 100%;
+  height: 100vh;
+  background-color: white;
 }
 
 .sidebarAdmin {
@@ -15,12 +17,14 @@
   padding: 20px;
   overflow: auto;
   position: relative;
+  margin-top: 50px;
 }
 
 .cardsContainerTag {
   display: grid;
   grid-template-columns: repeat(2, 1fr); /* Two cards per row */
   gap: 16px;
+
   margin-right: 420px; /* Adjust to ensure no overlap with form */
 }
 
