--- a/frontend/src/Admin++/pages/AllTourists/AllTourists.scss
+++ b/frontend/src/Admin++/pages/AllTourists/AllTourists.scss
@@ -1,6 +1,8 @@
 .listActiveUsers {
   display: flex;
   width: 100%;
+  height: 100vh;
+  background-color: white;
 }
 
 .listContainerActiveUsers {
