--- a/frontend/src/Admin++/pages/PendingUsers/PendingUsers.scss
+++ b/frontend/src/Admin++/pages/PendingUsers/PendingUsers.scss
@@ -1,6 +1,8 @@
 .listActiveUsers {
   display: flex;
   width: 100%;
+  // background-color: white;
+  // height: 100vh;
 }
 
 .listContainerActiveUsers {
