--- a/frontend/src/Admin++/pages/Products/actions.scss
+++ b/frontend/src/Admin++/pages/Products/actions.scss
@@ -1,9 +1,13 @@
 .listAdminProduct {
   display: flex;
   width: 100%;
+  height: 100vh;
+  top: 0;
+  background-color: white;
 
   .listContainerAdminProduct {
     flex: 6;
+    margin-top: 50px;
     font-family: "Poppins", sans-serif;
     display: flex;
     flex-direction: column;
