--- a/frontend/src/Seller/Components/actions.scss
+++ b/frontend/src/Seller/Components/actions.scss
@@ -1,14 +1,13 @@
 .listSeller {
+  display: flex;
+  width: 100%;
+
+  height: 100vh;
+  background-color: white;
+  .listContainerSeller {
+    flex: 6;
     display: flex;
-    width: 100%;
-    .listContainerSeller {
-      flex: 6;
-      display: flex;
-      flex-direction: column;
-      overflow-y: auto;
+    flex-direction: column;
+    overflow-y: auto;
   }
-   
-  }
- 
- 
-  
+}
