--- a/frontend/src/Admin++/components/sidebar/sidebar.scss
+++ b/frontend/src/Admin++/components/sidebar/sidebar.scss
@@ -1,6 +1,7 @@
 .sidebarAdmin {
   flex: 1;
-  border-right: 5px solid #91c2979b;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  //border-right: 5px solid #91c2979b;
   height: 100vh; /* Makes the sidebar height fill the viewport */
   //background-color: white;
   background-color: #f4eaef76;
