--- a/frontend/src/Admin++/pages/AddAdmin/AddAdmin.scss
+++ b/frontend/src/Admin++/pages/AddAdmin/AddAdmin.scss
@@ -72,12 +72,12 @@
 }
 
 /* Icon styling within the Card */
-.adminCard .MuiSvgIcon-root {
-  color: #91c297 !important; /* Icon color */
-  &:hover {
-    color: #91c297 !important; /* Darker color when hovering */
-  }
-}
+// .adminCard .MuiSvgIcon-root {
+//   color: #91c297 !important; /* Icon color */
+//   &:hover {
+//     color: #91c297 !important; /* Darker color when hovering */
+//   }
+// }
 
 /* Position AddAdminForm in the top-right corner */
 .addAdminForm {
