--- a/frontend/src/Advertiser/Components/ActivityForm.css
+++ b/frontend/src/Advertiser/Components/ActivityForm.css
@@ -25,16 +25,16 @@
   margin-bottom: 1rem;
 }
 
-/* .MuiButton-root {
+.MuiButton-root {
   margin-top: 1rem;
   background-color: #91c297 !important;
 }
 
 .MuiButton-root:hover {
   background-color: #6fa478 !important;
-} */
+}
 
-/* .MuiTabs-root {
+.MuiTabs-root {
   margin-bottom: 1rem;
 }
 
