--- a/frontend/src/Advertiser/pages/HomeScreen.css
+++ b/frontend/src/Advertiser/pages/HomeScreen.css
@@ -1,4 +1,4 @@
-.home {
+/* .home {
     display: flex;
     padding-top: 50px;
 }
@@ -74,4 +74,36 @@
 .activity-card:hover {
     transform: scale(1.02);
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+} */
+
+.home-guide {
+  display: flex;
+
+  .homeContainer-guide {
+    flex: 6;
+
+    .widgets-guide,
+    .charts-guide {
+      display: flex;
+      padding: 20px;
+      gap: 20px;
+    }
+
+    .charts-guide {
+      padding: 5px 20px;
+    }
+
+    .listContainer-guide {
+      -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+      box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+      padding: 20px;
+      margin: 20px;
+
+      .listTitle-guide {
+        font-weight: 500;
+        color: gray;
+        margin-bottom: 15px;
+      }
+    }
+  }
 }
